# pve-lxc-syscalld

./: .gitignore  Cargo.toml  Makefile  Todo.md  defines.mk
debian/: changelog  control  control.in  debcargo.toml  install  postinst  rules
etc/: Makefile  pve-lxc-syscalld.service.in
src/: apparmor.rs  capability.rs  client.rs  epoll.rs  error.rs  executor.rs  fork.rs  iovec.rs  lxcseccomp.rs  macros.rs  main.rs  nsfd.rs  pidfd.rs  pipe.rs  poll_fn.rs  reactor.rs  rw_traits.rs  seccomp.rs  seq_packet.rs  socket.rs  sys_mknod.rs  sys_quotactl.rs  syscall.rs  tools.rs
src/executor/: mod.rs  ring.rs  slot_list.rs  thread_pool.rs
src/io/: cmsg.rs  epoll.rs  mod.rs  pipe.rs  polled_fd.rs  reactor.rs  seq_packet.rs
src/process/: cgroups.rs  fd.rs  id_map.rs  mod.rs  pid_fd.rs  user_caps.rs
src/socket/: mod.rs
