[package]
name = "pve-lxc-syscalld"
edition = "2018"
version = "1.0.0"
authors = [
    "Wolfgang Bumiller <w.bumiller@proxmox.com>",
]
license = "AGPL-3"
description = "Proxmox LXC seccomp-proxy syscall handler daemon"
homepage = "https://www.proxmox.com"

exclude = [ "build", "debian" ]

[dependencies]
bitflags = "1.2"
anyhow = "1.0"
lazy_static = "1.4"
libc = "0.2"
nix = "0.19"
tokio = { version = "1.0", features = [ "rt-multi-thread", "io-util", "net" ] }
