[package]
name = "pve-lxc-syscalld"
edition = "2024"
version = "2.0.2"
authors = [
    "Wolfgang Bumiller <w.bumiller@proxmox.com>",
]
license = "AGPL-3"
description = "Proxmox LXC seccomp-proxy syscall handler daemon"
homepage = "https://www.proxmox.com"

rust-version = "1.85"

exclude = [ "debian" ]

[dependencies]
anyhow = "1.0"
bitflags = "2"
libc = "0.2"
nix = { version = "0.29", features = [ "fs", "socket" ] }
num_cpus = "1"
tokio = { version = "1.0", features = [ "rt-multi-thread", "io-util", "net" ] }
